<resources>
    <string name="app_name">acuar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="get_started_button">Get Started</string>
    <string name="get_started_tur1">Get your car washed in the \nconvenience of your own home</string>
    <string name="get_started_tur2">Book an appointment between\n 07:00 and 18:00 7 days a week</string>
    <string name="get_started_tur3">Enjoy convenience</string>
    <string name="terms_title">Acuar Agreements</string>
    <string name="terms_content">
        <![CDATA[
        <p><center><b><u>ACUAR AGREEMENTS</u></b></center></p>
        <p>You are about to sign up to be an acuar end user</p>
        <p>By clicking ‘accept’ you confirm that:</p>
        <p><b>1.	The contract</b></p>
        <p>1.1	You have read, understood and agree to the terms of use and the Privacy Policy (the agreements). Any person booking or receiving car wash services provided for by acuar agrees to and is bound by these agreements.</p>
        <p><b><u>ACUAR TERMS OF USE</p></b></u>
        <p><b>2.	The service</b></p>
        <p>2.1	A booking must be made on the acuar app by selecting the category of the car to be washed, the wash type referred to as “wash” and confirming the availability of the utilities, i.e. water referred to as accessible “tap” and electricity referred to as “plug” for the car to be washed. The water and power sources must be, at most twenty (20) metres away from the area in which the carwash service will be rendered. Fill in the desired date, time and location at which you desire the acuar operators to render the carwash service. The cost of the carwash service selected will be displayed above the “confirm” button. Select confirm to book the appointment.</p>
        <p>2.2	We warrant that the services shall</p>
            <br>a) Materially comply with the relevant descriptions posted on the app</br>
            <br>b) Be carried out with reasonable skill and care and</br>
            <br>c) Comply with all applicable statutory and regulatory requirements</br>
        <p>2.3	We will make every effort to arrive and complete the services on time in each instance, but there may be delays due to circumstances beyond our control in which case we will complete the services as soon as reasonably possible</p>
        <p>2.4	 We reserve the right to suspend the service if we must deal with technical problems or to make improvements to the service/equipment</p>
        <br></br>
        <p><b>3.	PRICES/PAYMENTS</b></p>
        <p>3.1	Payments should be made via credit or debit card; the acuar operator will facilitate payment with the use of a secure card machine prior to rendering the car wash service. Failure to do so will result in the services not being provided to you</p>
        <p>3.2	The prices for the carwash services are displayed on the acuar app, prices are subject to change and we reserve the right to change such prices at any time by posting new prices on the acuar app. All prices are inclusive of VAT unless otherwise stated; we shall determine the category/size of your vehicle in our sole discretion. If the car to be washed does not fit the category/size selected in the acuar app, the cost of the wash will be adjusted by the acuar operators accordingly</p>
        <br></br>
        <p><b>4.    LIABILITY</b></p>
        <p>4.1	You must remove from your vehicle any valuable items which are not connected to your vehicle, we will not be liable/responsible for any loss of or damage to any such items. Please do not ask our operators to remove or store any such items for you as we cannot accept any responsibility or liability.</p>
        <p>4.2	Child seats must be removed and replaced by you as our operators will not refit in any circumstances</p>
        <p>4.3	The car must be positioned in the area the user would like for the car to be washed. This area must be near the accessible “tap” and “plug” points; preferably in a shady area. Acuar operators will not, under any circumstances, move or drive the car around or to a desired area.</p>
        <p>4.4	Before allowing us to begin providing the carwash service, you must tell us about any defects, damage or weakness in your vehicle which may affect the services or otherwise relevant</p>
        <p>4.5	You agree that existing paint chips/scratches on your vehicle may become visible after cleaning and that we will not be held responsible for any lifting and /or flaking to paint work, lacquer, decals and trim (including without limitations wheels) during the valet process where this is a result of an underlying condition which may not be obvious prior to valeting the vehicle. You understand that reasonable care will be taken to your vehicle whilst under our control, but you understand that we will not be held responsible for damage that might occur to your vehicle when we are done with the service</p>
        <p>4.6	 We shall not accept any responsibility for claims made after the vehicle has been washed and the operator has left</p>
        <p>4.7	Our total responsibility to you hereunder (including for acts of our employees, agents, consultants and/or subcontractors) shall be limited to the greater of:</p>
        <br>a) The actual value of any evidenced damage to your vehicle and</br>
        <br>b) We shall not under any circumstances be liable for any indirect or consequential loss, including without limitation to loss of profits or business or use of vehicle</br>
        <br></br>
        <p>5.	All warranties, conditions and other terms implied by statue or common law are, to the fullest extent permitted by law, excluded from this agreement however nothing herein is intended to limit liability for death, personal injury or fraud.</p>
        <br></br>
         <p><b><u>ACUAR PRIVACY POLICY</p></b></u>
        <br>At acuar, we respect your right to privacy. When you use acuar services you provide and trust us with private information which we intend to keep private. The acuar Privacy Policy describes the type of information we will collect from all acuar app users, how we may use that information and with whom the information may be shared. By downloading, installing and using the acuar app and services you acknowledge that you accept the practices highlighted in the acuar Privacy Policy. This policy applies to all acuar users and operators.</br>
        <p>6.	Acuar will collect the information you provide when you sign up to create or update an acuar app account. You must provide us with your email address, names, optional photograph, phone number and location address. We will use these details to inform you of any promotions, to inform you when the operators have arrived at the specified location and send relevant receipts for the services offered.</p>
        <br/>
        <p>7.	We will access any transactional information for any services or requests provided through the acuar app. This information is necessary for tracking operator or business productivity and performance. Transactional information may also be accessed to resolve acuar user queries.</p>
        <br/>
        <p>8.	When you use the acuar app we will collect information on the availability of relevant utilities namely water and electricity, the make of car to be washed, your location information, date and time booked for the carwash appointment. This information is necessary for acuar operators to successfully facilitate the acuar experience.</p>
        <br/>
        <p>9.	We strive to take reasonable and appropriate security measures to guard against unauthorized access to the systems where we store your personal information. This includes physical and electronic security measures in compliance with applicable security requirements. In addition, we authorize access to personal information only for those of our employees or service providers who require it to fulfil their job responsibilities.  However, despite the measures we take we cannot warrant the security of any information provided to us.</p>
        <br/>
        <p>10.	We may make changes to this policy from time to time. If we change or add any new details to this policy regarding the way we use your personal information, we will post a notification on our website or send a direct email to you. Users are bound by any changes to acuar Privacy Policy when he or she uses our services after such changes have been first posted.</p>
    ]]>
    </string>
    <string name="terms_accept_button">Accept</string>
    <string name="terms_decline_button">Decline</string>
    <string name="register_verify_phone">Verify your phone number</string>
    <string name="register_verify_content">acuar will send SMS message to verify your phone\nnumber.Enter your country code and phone number.</string>
    <string name="register_verify_note">Carrier SMS charges may apply</string>
    <string name="register_verify_sent">Verification code sent</string>
    <string name="register_button_resend">Resend</string>
    <string name="register_button_next">Next</string>
    <string name="register_button_done">Done</string>
    <string name="register_user_title">Edit your profile</string>
    <string name="register_user_content">Enter your name and add an optional profile picture.</string>
    <string name="register_user_first_name">First Name</string>
    <string name="register_user_last_name">Last Name</string>
    <string name="register_user_email">Email Address</string>
    <string name="register_user_phone">Phone Number</string>
    <string name="register_user_field_empty">This field should not be empty!</string>
    <string name="register_user_invalid_email">Invalid Email</string>
    <string name="feedback_last_exp">Your last acuar experience</string>
    <string name="feedback_report">Report an issue</string>
    <string name="feedback_title_1">I am not satisfied with the quality of the carwash</string>
    <string name="feedback_title_2">The acuar operators were unprofessional</string>
    <string name="feedback_title_3">The acuar carwash service did not arrive</string>
    <string name="feedback_title_4">I lost an item</string>
    <string name="feedback_title_5">The carwash service has caused damage to my car</string>
    <string name="feedback_title_6">I have a different issue</string>
    <string name="where_notes">We operate in the following areas:</string>
    <string name="where_area1"> Aanwins AH\n
                                Allen’s Nek\n
                                Alsef AH\n
                                Ambot AH\n
                                Amorosa\n
                                Constantia Kloof\n
                                Eagle canyon estate\n
                                Harveston AH\n
                                Helderkruin\n
                                Honeydew\n
                                Honeydew Manor\n
                                Honeydew ridge\n
                                Honeypark\n
                                Laser Park\n
                                Little falls
    </string>
    <string name="where_area2"> Noordekrans\n
                                Panorama 200 IQ\n
                                Panorama AH\n
                                Poortveiw AH\n
                                Radiokop\n
                                Roodekrans\n
                                Ruimsig\n
                                Ruimsig AH\n
                                Ruimsig Noord\n
                                Strubensvalley\n
                                Weltevreden Park\n
                                Wilgeheuwel\n
                                Wilgespruit\n
                                Willowbrook\n
                                Wilro Park
    </string>
</resources>