<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mosili.acua.RegisterTermsActivity">

    <LinearLayout
        android:id="@+id/layout_get_started"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_logo" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <TextView
                android:id="@+id/txtTur1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/get_started_tur1"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtTur1"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtTur2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTur1"
                android:layout_marginTop="53dp"
                android:layout_centerHorizontal="true"
                android:text="@string/get_started_tur2"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtTur2"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtTur3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTur2"
                android:layout_marginTop="53dp"
                android:layout_centerHorizontal="true"
                android:text="@string/get_started_tur3"
                android:textSize="16dp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textAllCaps="false"
                android:text="@string/get_started_button"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorPrimary"/>
        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrlTerms"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_title"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtTitle"
                android:src="@drawable/img_logo"/>

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/imgLogo"
                android:text="@string/terms_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTerms"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/btnAccept"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/terms_accept_button"
                        android:textColor="@color/colorWhite"
                        android:backgroundTint="@color/colorPrimary"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/btnDecline"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/terms_decline_button"
                        android:textColor="@color/colorWhite"
                        android:backgroundTint="@color/colorPrimary"/>
                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
